--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -23,7 +23,7 @@
 
 .time-cards-container {
   display: grid;
-  gap: var(--gap);
+  gap: 2rem var(--gap);
   @include mq($desktop-width, up) {
     @include column-start-end(2, 5);
     grid-template-columns: repeat(3, 1fr);
